Adding project code

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 0.02em;
+    background-color: #ffffff;
+    color: #464646;
+
+}
